objects/tdc_tvte__Object_Setup__c/tdc_tvte__Object_Setup__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Object Setup</label>
</CustomObject>