objects/tdc_tvte__Object_Setup__c/fields/tdc_tvte__Country_Code__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__Country_Code__c</fullName>
    <label>Country Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>