objects/tdc_tvte__Object_Setup__c/fields/tdc_tvte__Country_Code_Setting__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__Country_Code_Setting__c</fullName>
    <label>Country Code Setting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>