objects/tdc_tvte__Object_Setup__c/fields/tdc_tvte__Object_Label__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__Object_Label__c</fullName>
    <label>Object Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>