objects/tdc_tvte__Object_Setup__c/fields/tdc_tvte__Phone_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__Phone_Api_Name__c</fullName>
    <label>Phone Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>